--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "cleanjs": "rimraf dist/Shell/*.js",
     "start": "yarn clean && webpack --config webpack.dev.js",
     "build:prod": "yarn clean && webpack --config webpack.prod.js && yarn cleanjs",
-    "build:archive": "yarn build:prod && ch5-cli archive -p shell-template -P samplesource=Shell -c ./app/config/TomVilla_2020-06-17.cse2j  -d dist/tom_villa -o dist",
+    "build:archive": "yarn build:prod && ch5-cli archive -p shell-template -P samplesource=Shell -c ./app/config/TomVilla.cse2j  -d dist/tom_villa -o dist",
     "build:deploy": "ch5-cli deploy -H hostname -t touchscreen dist/shell-template.ch5z",
     "build:onestep": "yarn build:archive && yarn build:deploy",
     "generate:component": "node shell-utilities/generate-component/generate-component.js",
