--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@crestron/ch5-theme": "^1.0.0",
     "@fortawesome/fontawesome-free": "^5.9.0",
     "animate.css": "^4.1.0",
+    "bootstrap": "^4.5.2",
     "lodash": "^4.17.19"
   }
 }
