--- a/package.json
+++ b/package.json
@@ -1,55 +1,55 @@
 {
-  "name": "shell-template",
-  "version": "0.1.0",
-  "main": "index.js",
-  "license": "SEE LICENSE IN LICENSE.txt",
-  "scripts": {
-    "clean": "rimraf dist",
-    "cleanjs": "rimraf dist/Shell/*.js",
-    "start": "yarn clean && webpack --config webpack.dev.js",
-    "build:prod": "yarn clean && webpack --config webpack.prod.js && yarn cleanjs",
-    "build:archive": "yarn build:prod && ch5-cli archive -p shell-template -P samplesource=Shell -c ./app/config/TomVilla.cse2j  -d dist/sheikh_palace -o dist",
-    "build:deploy": "ch5-cli deploy -H hostname -t touchscreen dist/shell-template.ch5z",
-    "build:onestep": "yarn build:archive && yarn build:deploy",
-    "generate:component": "node shell-utilities/generate-component/generate-component.js",
-    "gen:c": "node shell-utilities/generate-component/generate-component.js",
-    "export:project": "node shell-utilities/export/export.js"
-  },
-  "devDependencies": {
-    "@crestron/ch5-utilities-cli": "^0.1.47",
-    "browser-sync": "^2.26.7",
-    "browser-sync-webpack-plugin": "^2.2.2",
-    "config": "^3.3.1",
-    "copy-webpack-plugin": "^5.0.4",
-    "css-loader": "^3.0.0",
-    "eslint": "^6.8.0",
-    "file-loader": "^4.0.0",
-    "glob": "^7.1.4",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "img-loader": "^3.0.1",
-    "mini-css-extract-plugin": "^0.7.0",
-    "node-sass": "^4.12.0",
-    "path": "^0.12.7",
-    "prompts": "^2.3.2",
-    "rimraf": "^3.0.2",
-    "sass-loader": "^7.1.0",
-    "scss-loader": "^0.0.1",
-    "style-loader": "^0.23.1",
-    "url-loader": "^2.0.0",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.4",
-    "webpack-concat-plugin": "^3.0.0",
-    "webpack-merge": "^4.2.1",
-    "write-json-webpack-plugin": "^1.1.0",
-    "zip-lib": "^0.5.0"
-  },
-  "dependencies": {
-    "@crestron/ch5-crcomlib": "^1.0.0",
-    "@crestron/ch5-theme": "^1.0.0",
-    "@fortawesome/fontawesome-free": "^5.9.0",
-    "animate.css": "^4.1.0",
-    "bootstrap": "^4.5.2",
-    "lodash": "^4.17.19"
-  }
+    "name": "shell-template",
+    "version": "0.1.0",
+    "main": "index.js",
+    "license": "SEE LICENSE IN LICENSE.txt",
+    "scripts": {
+        "clean": "rimraf dist",
+        "cleanjs": "rimraf dist/Shell/*.js",
+        "start": "yarn clean && webpack --config webpack.dev.js",
+        "build:prod": "yarn clean && webpack --config webpack.prod.js && yarn cleanjs",
+        "build:archive": "yarn build:prod && ch5-cli archive -p shell-template -P samplesource=Shell -c ./app/config/TomVilla.cse2j  -d dist/sheikh_palace -o dist",
+        "build:deploy": "ch5-cli deploy -H 192.168.1.76 -t touchscreen dist/shell-template.ch5z",
+        "build:onestep": "yarn build:archive && yarn build:deploy",
+        "generate:component": "node shell-utilities/generate-component/generate-component.js",
+        "gen:c": "node shell-utilities/generate-component/generate-component.js",
+        "export:project": "node shell-utilities/export/export.js"
+    },
+    "devDependencies": {
+        "@crestron/ch5-utilities-cli": "^0.1.47",
+        "browser-sync": "^2.26.7",
+        "browser-sync-webpack-plugin": "^2.2.2",
+        "config": "^3.3.1",
+        "copy-webpack-plugin": "^5.0.4",
+        "css-loader": "^3.0.0",
+        "eslint": "^6.8.0",
+        "file-loader": "^4.0.0",
+        "glob": "^7.1.4",
+        "html-loader": "^0.5.5",
+        "html-webpack-plugin": "^3.2.0",
+        "img-loader": "^3.0.1",
+        "mini-css-extract-plugin": "^0.7.0",
+        "node-sass": "^4.12.0",
+        "path": "^0.12.7",
+        "prompts": "^2.3.2",
+        "rimraf": "^3.0.2",
+        "sass-loader": "^7.1.0",
+        "scss-loader": "^0.0.1",
+        "style-loader": "^0.23.1",
+        "url-loader": "^2.0.0",
+        "webpack": "^4.35.0",
+        "webpack-cli": "^3.3.12",
+        "webpack-concat-plugin": "^3.0.0",
+        "webpack-merge": "^4.2.1",
+        "write-json-webpack-plugin": "^1.1.0",
+        "zip-lib": "^0.5.0"
+    },
+    "dependencies": {
+        "@crestron/ch5-crcomlib": "^1.0.0",
+        "@crestron/ch5-theme": "^1.0.0",
+        "@fortawesome/fontawesome-free": "^5.9.0",
+        "animate.css": "^4.1.0",
+        "bootstrap": "^4.5.2",
+        "lodash": "^4.17.19"
+    }
 }
